fixed `<h1>`'s vertical text alignment within the header

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -97,6 +97,14 @@ h1 {
 	border-right: 1px solid var(--color-background);
 }
 
+header label.stretch {
+	align-items: center;
+	display: flex;
+}
+header h1 {
+	width: 100%;
+}
+
 h1,
 h2,
 h3 {
